--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
         <link rel="stylesheet" type="text/css" href="build/app.css" />
     </head>
     <body>
+        <div id="app">
+            <h1>TODO list</h1>
+            <todo-list :list='[{"title": "Finish workshop", "state": false}]'></todo-list>
+        </div>
         <script src="build/app.js"></script>
     </body>
 </html>
